2005-01-25  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql: Add qexo prefix to request-query-string, to test
	that it works both with and without the prefix.

2005-01-19  Dominique Boucher <dominique.boucher@nuecho.com>

	* formatst.scm:  Add some more regression tests.

2005-01-16  Per Bothner  <per@bothner.com>

	* module3.scm: Added test for Savannah bug #11578, submitted
	by Dean Ferreyra from Merced Systems.
	* obj-test.scm: Invoke said test.

2005-01-09  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql: Update to current XQuery syntax.

2005-01-08  Per Bothner  <per@bothner.com>

	* module1.scm: New test for Savannh bug #11508,
	from Thomas Kirk <tk@research.att.com>.
	* module2.scm (my-array-7): New variableusing above macro.
	* obj-test.scm: new test to check my-array-7.

2005-01-02  Per Bothner  <per@bothner.com>

	* formatst.scm: Add 4 tests for ~<...~:> (Logical Block).

2004-12-26  Per Bothner  <per@bothner.com>

	* included-1.scm: New file, to test include-relative.
	* Makefile.am (EXTRA_DIST): Update accordingly.
	* module1.scm (list0length-): Use include-relative

	* mac-test.scm: New test based on code by Andre van Tonder

2004-12-24  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test, from Chez Scheme User's Guide.

2004-12-22  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add new tests for double elipsis in template.

2004-12-07  Per Bothner  <per@bothner.com>

	* classes1.scm: Add test for define-namespace of a class.
	* classes2.scm: Test creating on non-static class.
	* obj-test.scm: Test creating of non-simple classes.

2004-12-02  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add MyDate.java and MyTimestamp.java.
	Should have been added 05-12.

2004-11-08  Per Bothner  <per@bothner.com>

	* mac-test.scm: More macro pattern-matching tests.

	* mac-test.scm: A bunch of new tests.
	Test cases from Savannah bugs #9483 and #10561, which now work.

2004-10-23  Per Bothner  <per@bothner.com>

	* mac-test.scm: Add new test.